// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NftGridEmpty matches the snapshot 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "display": "flex",
    }
  }
>
  <Image
    resizeMode="contain"
    source={1}
    style={
      {
        "height": 90,
        "marginBottom": 12,
        "marginTop": 30,
        "tintColor": "lightgray",
        "width": 90,
      }
    }
  />
  <Text
    accessibilityRole="text"
    style={
      {
        "color": "#6a737d",
        "fontFamily": "EuclidCircularB-Bold",
        "fontSize": 18,
        "fontWeight": "700",
        "letterSpacing": 0,
        "lineHeight": 24,
        "marginTop": 10,
      }
    }
  >
    No NFTs yet
  </Text>
  <TouchableOpacity
    onPress={[Function]}
  >
    <Text
      accessibilityRole="text"
      onPress={[Function]}
      style={
        {
          "color": "#0376c9",
          "fontFamily": "EuclidCircularB-Medium",
          "fontSize": 14,
          "fontWeight": "500",
          "letterSpacing": 0,
          "lineHeight": 22,
        }
      }
    >
      Learn more
    </Text>
  </TouchableOpacity>
</View>
`;

exports[`NftGridFooter matches the snapshot 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "display": "flex",
    }
  }
>
  <Text
    accessibilityRole="text"
    style={
      {
        "color": "#6a737d",
        "fontFamily": "EuclidCircularB-Medium",
        "fontSize": 14,
        "fontWeight": "500",
        "letterSpacing": 0,
        "lineHeight": 22,
      }
    }
  >
    Don’t see your NFT?
  </Text>
  <TouchableOpacity
    disabled={false}
    onPress={[Function]}
    testID="import-collectible-button"
  >
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#0376c9",
          "fontFamily": "EuclidCircularB-Medium",
          "fontSize": 14,
          "fontWeight": "500",
          "letterSpacing": 0,
          "lineHeight": 22,
        }
      }
    >
      Import NFTs
    </Text>
  </TouchableOpacity>
</View>
`;

exports[`NftGridItem matches the snapshot 1`] = `
<TouchableOpacity
  onLongPress={[Function]}
  onPress={[Function]}
  style={
    {
      "alignItems": "center",
      "flexBasis": "33%",
      "justifyContent": "center",
      "marginBottom": 10,
      "padding": 10,
    }
  }
  testID="Test NFT"
>
  <View
    style={
      {
        "backgroundColor": undefined,
        "borderRadius": 12,
        "flex": 0,
      }
    }
  >
    <View
      useNativeDriver={true}
    >
      <View
        onLoadEnd={[Function]}
      >
        <View
          onLayout={[Function]}
          style={
            {
              "alignSelf": "flex-start",
              "position": "relative",
            }
          }
          testID="badge-wrapper-badge"
        >
          <View>
            <View
              style={
                [
                  {
                    "borderRadius": 12,
                  },
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  {
                    "aspectRatio": 1,
                    "width": "100%",
                  },
                ]
              }
            >
              <Image
                fadeIn={true}
                isTokenImage={true}
                onError={[Function]}
                resizeMode="cover"
                source={
                  {
                    "uri": "https://example.com/image.png",
                  }
                }
                style={
                  {
                    "borderRadius": 8,
                    "height": "100%",
                    "width": "100%",
                  }
                }
                testID="nft-image"
              />
            </View>
          </View>
          <View
            style={
              {
                "position": "absolute",
                "right": -4,
                "top": -4,
              }
            }
          >
            <View
              onLayout={[Function]}
              style={{}}
              testID="badgenetwork"
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "backgroundColor": "#ffffff",
                    "borderColor": "#ffffff",
                    "borderRadius": 8,
                    "borderWidth": 1,
                    "height": 16,
                    "justifyContent": "center",
                    "overflow": "hidden",
                    "shadowColor": "#0000001a",
                    "shadowOffset": {
                      "height": 2,
                      "width": 0,
                    },
                    "shadowOpacity": 1,
                    "shadowRadius": 4,
                    "width": 16,
                  }
                }
              >
                <Image
                  onError={[Function]}
                  resizeMode="contain"
                  source={1}
                  style={
                    {
                      "height": 16,
                      "width": 16,
                    }
                  }
                  testID="network-avatar-image"
                />
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        collapsable={false}
        style={
          {
            "bottom": 0,
            "left": 0,
            "opacity": 1,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          style={
            [
              {},
              {
                "backgroundColor": "#eee",
              },
              undefined,
            ]
          }
        />
      </View>
    </View>
  </View>
  <Text
    accessibilityRole="text"
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      {
        "color": "#141618",
        "fontFamily": "EuclidCircularB-Regular",
        "fontSize": 14,
        "fontWeight": "400",
        "letterSpacing": 0,
        "lineHeight": 22,
      }
    }
  >
    Test NFT
  </Text>
  <Text
    accessibilityRole="text"
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      {
        "color": "#141618",
        "fontFamily": "EuclidCircularB-Regular",
        "fontSize": 14,
        "fontWeight": "400",
        "letterSpacing": 0,
        "lineHeight": 22,
      }
    }
  >
    Test Collection
  </Text>
</TouchableOpacity>
`;
